fix: snap gap

--- a/src/app/[locale]/main/style.scss
+++ b/src/app/[locale]/main/style.scss
@@ -19,7 +19,7 @@
 
 %ground-base {
   @include flex-column;
-  gap: 400px;
+  gap: 300px;
   padding: 100px;
   width: 100%;
 }
